--- a/examples/config/uzbl/config
+++ b/examples/config/uzbl/config
@@ -4,25 +4,25 @@
 # keyboard behavior in this sample config is sort of vimstyle
 
 # Handlers
-set download_handler = spawn $XDG_DATA_HOME/uzbl/scripts/download.sh
-set cookie_handler   = spawn $XDG_DATA_HOME/uzbl/scripts/cookies.py
-#set new_window      = sh 'echo uri "$8" > $4' # open in same window
-set new_window       = sh 'uzbl -u $8' # equivalent to the default behaviour
-set scheme_handler   = spawn $XDG_DATA_HOME/uzbl/scripts/scheme.py
-set load_start_handler = chain 'set keycmd = ' 'set status_message = <span foreground="khaki">wait</span>'
+set download_handler    = spawn $XDG_DATA_HOME/uzbl/scripts/download.sh
+set cookie_handler      = spawn $XDG_DATA_HOME/uzbl/scripts/cookies.py
+#set new_window         = sh 'echo uri "$8" > $4' # open in same window
+set new_window          = sh 'uzbl -u $8' # equivalent to the default behaviour
+set scheme_handler      = spawn $XDG_DATA_HOME/uzbl/scripts/scheme.py
+set load_start_handler  = chain 'set keycmd = ' 'set status_message = <span foreground="khaki">wait</span>'
 set load_commit_handler = set status_message = <span foreground="green">recv</span>
 set load_finish_handler = chain 'set status_message = <span foreground="gold">done</span>' 'spawn $XDG_DATA_HOME/uzbl/scripts/history.sh'
 
 
 
 # Behaviour and appearance
-set show_status       = 1
-set status_background = #303030
-set status_format     = <span font_family="monospace"><span background="khaki" foreground="black">[\@[\@MODE]\@]</span> [<span weight="bold" foreground="red">\@[\@keycmd]\@</span>] <span foreground="#606060"> \@[\@LOAD_PROGRESSBAR]\@ </span><span foreground="#99FF66">\@[\@uri]\@</span> <span foreground="khaki">\@[\@NAME]\@</span>   <span foreground="orange">\@status_message</span><span foreground="#606060"> \@[\@SELECTED_URI]\@</span></span>
-set status_top        = 0
-set insert_indicator = I
-set command_indicator = C
-set useragent       = Uzbl (Webkit @WEBKIT_MAJOR.@WEBKIT_MINOR.@WEBKIT_MICRO) (@(uname -s)@ @(uname -n)@ @(uname -r)@ @(uname -v)@ @(uname -m)@ [@ARCH_UZBL]) (Commit @COMMIT)
+set show_status         = 1
+set status_background   = #303030
+set status_format       = <span font_family="monospace"><span background="khaki" foreground="black">[\@[\@MODE]\@]</span> [<span weight="bold" foreground="red">\@keycmd_marked</span>] <span foreground="#606060"> \@[\@LOAD_PROGRESSBAR]\@ </span><span foreground="#99FF66">\@[\@uri]\@</span> <span foreground="khaki">\@[\@NAME]\@</span>   <span foreground="orange">\@status_message</span><span foreground="#606060"> \@[\@SELECTED_URI]\@</span></span>
+set status_top          = 0
+set insert_indicator    = I
+set command_indicator   = C
+set useragent           = Uzbl (Webkit @WEBKIT_MAJOR.@WEBKIT_MINOR.@WEBKIT_MICRO) (@(uname -s)@ @(uname -n)@ @(uname -r)@ @(uname -v)@ @(uname -m)@ [@ARCH_UZBL]) (Commit @COMMIT)
 
 set fifo_dir = /tmp
 set socket_dir = /tmp
