--- a/Makefile-old
+++ b/Makefile-old
@@ -1,4 +1,4 @@
-# first entries are for gnu make, 2nd for BSD make.  see http://lists.uzbl.org/pipermail/uzbl-dev-uzbl.org/2009-July/000177.html
+# first entries are for gnu make, 2nd for BSD make.  see http://lists.reuzbl.org/pipermail/reuzbl-dev-reuzbl.org/2009-July/000177.html
 
 CFLAGS:=-std=c99 $(shell pkg-config --cflags gtk+-2.0 webkit-1.0 libsoup-2.4 gthread-2.0) -ggdb -Wall -W -DARCH="\"$(shell uname -m)\"" -lgthread-2.0 -DG_ERRORCHECK_MUTEXES -DCOMMIT="\"$(shell git log | head -n1 | sed "s/.* //")\"" $(CPPFLAGS) -fPIC -W -Wall -Wextra -pedantic -ggdb3
 CFLAGS!=echo -std=c99 `pkg-config --cflags gtk+-2.0 webkit-1.0 libsoup-2.4 gthread-2.0` -ggdb -Wall -W -DARCH='"\""'`uname -m`'"\""' -lgthread-2.0 -DG_ERRORCHECK_MUTEXES -DCOMMIT='"\""'`git log | head -n1 | sed "s/.* //"`'"\""' $(CPPFLAGS) -fPIC -W -Wall -Wextra -pedantic -ggdb3
@@ -6,42 +6,42 @@ CFLAGS!=echo -std=c99 `pkg-config --cflags gtk+-2.0 webkit-1.0 libsoup-2.4 gthre
 LDFLAGS:=$(shell pkg-config --libs gtk+-2.0 webkit-1.0 libsoup-2.4 gthread-2.0) -pthread $(LDFLAGS)
 LDFLAGS!=echo `pkg-config --libs gtk+-2.0 webkit-1.0 libsoup-2.4 gthread-2.0` -pthread $(LDFLAGS)
 
-all: uzbl
+all: reuzbl
 
 PREFIX?=$(DESTDIR)/usr/local
 
-# When compiling unit tests, compile uzbl as a library first
-tests: uzbl.o
-	$(CC) -DUZBL_LIBRARY -shared -Wl uzbl.o -o ./tests/libuzbl.so
+# When compiling unit tests, compile reuzbl as a library first
+tests: reuzbl.o
+	$(CC) -DREUZBL_LIBRARY -shared -Wl reuzbl.o -o ./tests/libreuzbl.so
 	cd ./tests/; $(MAKE)
 
-test: uzbl
-	./uzbl --uri http://www.uzbl.org --verbose
+test: reuzbl
+	./reuzbl --uri http://www.reuzbl.org --verbose
 
-test-dev: uzbl
-	XDG_DATA_HOME=./examples/data               XDG_CONFIG_HOME=./examples/config               ./uzbl --uri http://www.uzbl.org --verbose
+test-dev: reuzbl
+	XDG_DATA_HOME=./examples/data               XDG_CONFIG_HOME=./examples/config               ./reuzbl --uri http://www.reuzbl.org --verbose
 
-test-share: uzbl
-	XDG_DATA_HOME=${PREFIX}/share/uzbl/examples/data XDG_CONFIG_HOME=${PREFIX}/share/uzbl/examples/config ./uzbl --uri http://www.uzbl.org --verbose
+test-share: reuzbl
+	XDG_DATA_HOME=${PREFIX}/share/reuzbl/examples/data XDG_CONFIG_HOME=${PREFIX}/share/reuzbl/examples/config ./reuzbl --uri http://www.reuzbl.org --verbose
 
 
 clean:
-	rm -f uzbl
-	rm -f uzbl.o
+	rm -f reuzbl
+	rm -f reuzbl.o
 	cd ./tests/; $(MAKE) clean
 
 install:
 	install -d $(PREFIX)/bin
-	install -d $(PREFIX)/share/uzbl/docs
-	install -d $(PREFIX)/share/uzbl/examples
-	install -m755 uzbl $(PREFIX)/bin/uzbl
-	cp -rp docs     $(PREFIX)/share/uzbl/
-	cp -rp config.h $(PREFIX)/share/uzbl/docs/
-	cp -rp examples $(PREFIX)/share/uzbl/
-	install -m644 AUTHORS $(PREFIX)/share/uzbl/docs
-	install -m644 README  $(PREFIX)/share/uzbl/docs
+	install -d $(PREFIX)/share/reuzbl/docs
+	install -d $(PREFIX)/share/reuzbl/examples
+	install -m755 reuzbl $(PREFIX)/bin/reuzbl
+	cp -rp docs     $(PREFIX)/share/reuzbl/
+	cp -rp config.h $(PREFIX)/share/reuzbl/docs/
+	cp -rp examples $(PREFIX)/share/reuzbl/
+	install -m644 AUTHORS $(PREFIX)/share/reuzbl/docs
+	install -m644 README  $(PREFIX)/share/reuzbl/docs
 
 
 uninstall:
-	rm -rf $(PREFIX)/bin/uzbl
-	rm -rf $(PREFIX)/share/uzbl
+	rm -rf $(PREFIX)/bin/reuzbl
+	rm -rf $(PREFIX)/share/reuzbl
